[metadata]
name = deepmem
version = 0.0.1
description = Deep learning implementations for sustainable matrix element method calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mihirkatare/DeepMEM
author = Mihir Katare
author_email = mkatare2@illinois.edu
license = Apache
license_file = LICENSE
keywords = physics mem "deep learning"
project_urls =
    Source = https://github.com/mihirkatare/DeepMEM
    Tracker = https://github.com/mihirkatare/DeepMEM/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    awkward>=1.3.0
    hist[plot]>=2.4.0
    matplotlib>=3.4
    scikit-learn~=0.24
    torchvision>=0.9.1
    uproot>=4.0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deepmem = deepmem._main:_main
    deepmem-data = deepmem.data:_main
    deepmem-model = deepmem.model:_main
    deepmem-utils = deepmem.utils:_main
    deepmem-version = deepmem._main:_version
